--- a/frontend/app/mintNFT/mintNFT.module.css
+++ b/frontend/app/mintNFT/mintNFT.module.css
@@ -7,7 +7,7 @@
     width: 512px;
     height: 512px;
     margin: 0 25px;
-    border: 3px solid #ff8700;
+    border: 3px solid rgba(255, 255, 255, 0.90);
     border-radius: 4px;
   
     overflow: hidden;
