--- a/frontend/Component/Header/Header.module.css
+++ b/frontend/Component/Header/Header.module.css
@@ -4,3 +4,13 @@
     color: rgba(255, 255, 255, 0.90);
     padding-right: 1rem;
 }
+
+.button{
+    background-color: #50A838 !important;
+    color: #fff !important;
+    border-radius: 10px !important;
+    background: #50A838 !important;
+    box-shadow: 0px 4px 0px 0px #3C8828 !important;
+    border-color: #5B7865 !important;
+    padding:'-0.5rem -1rem' !important;
+}
