--- a/frontend/app/mintNFT/mintNFT.module.css
+++ b/frontend/app/mintNFT/mintNFT.module.css
@@ -4,11 +4,11 @@
     align-items: center;
   
     max-width: 90%;
-    width: 512px;
-    height: 512px;
+    width: 20rem;
+    height: 20rem;
     margin: 0 25px;
     border: 3px solid rgba(255, 255, 255, 0.90);
-    border-radius: 4px;
+    border-radius: 20px;
   
     overflow: hidden;
   }
@@ -17,4 +17,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+
+.thinwhiteborder {
+    border: 1px solid #9A9A9A;
+    width: 70vw;
   }
